# apps/leximory-ios/Core/Sources/LeximoryCore/openapi.json
@@ -1330,6 +1330,10 @@
                       "null"
                     ],
                     "pattern": "^[A-Za-z0-9_-]{1,128}$"
+                  },
+                  "requestId": {
+                    "type": "string",
+                    "pattern": "^[A-Za-z0-9_-]{1,128}$"
                   }
                 },
                 "required": [
@@ -2149,6 +2153,10 @@
                 "type": "object",
                 "properties": {
                   "completionId": {
+                    "type": "string",
+                    "pattern": "^[A-Za-z0-9_-]{1,128}$"
+                  },
+                  "requestId": {
                     "type": "string",
                     "pattern": "^[A-Za-z0-9_-]{1,128}$"
                   }
